force-app/main/default/objects/Bill_of_Materials__c/Bill_of_Materials__c.object-meta.xml
<CustomObject>
    <label>Bill of Material</label>
    <nameField>
        <label>Bill of Materials</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill of Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>