force-app/main/default/objects/Bill_of_Materials__c/fields/BOM_Levels__c.field-meta.xml
<CustomField>
    <fullName>BOM_Levels__c</fullName>
    <label>BOM Levels</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>