force-app/main/default/objects/Bill_of_Materials__c/fields/BOM_Routing__c.field-meta.xml
<CustomField>
    <fullName>BOM_Routing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM Routing</label>
    <referenceTo>BOM_Routing__c</referenceTo>
    <relationshipLabel>Bill of Materials</relationshipLabel>
    <relationshipName>Bill_of_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>