force-app/main/default/objects/Bill_of_Materials__c/fields/BOM_Type__c.field-meta.xml
<CustomField>
    <fullName>BOM_Type__c</fullName>
    <label>BOM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Make</fullName>
            </value>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>