force-app/main/default/objects/Bill_of_Materials__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bill of Materials</relationshipLabel>
    <relationshipName>Bill_of_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>