force-app/main/default/objects/Bill_of_Materials__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>