force-app/main/default/objects/Bill_of_Materials__c/fields/Total_BOM_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_BOM_Cost__c</fullName>
    <label>Total BOM Cost</label>
    <summarizedField>BOM_Lines__c.Ext_Cost__c</summarizedField>
    <summaryForeignKey>BOM_Lines__c.Bill_of_Material__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>