force-app/main/default/objects/Bill_of_Materials__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BOM_Routing__c</columns>
    <columns>BOM_Levels__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Product_Image__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>